service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-server
spec:
  selector:
    app: model-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30000  # Choose a port in the range 30000-32767
  type: NodePort
